# mesa

./: meson.build  meson_options.txt
src/: meson.build
src/virgl/: meson.build
src/virgl/common/: list.h  macros.h  meson.build  vector.h
src/virgl/tools/: codegen_entrypoints.py  codegen_icdfiles.py  codegen_objects.py  codegen_utils.py  implemented.json  obj_creation.json  vtest_protocol_objects.json
src/virgl/tools/templates/: vgl_entrypoints_template.c
src/virgl/vtest/: meson.build  virgl_vtest.h  vtest_commands.c  vtest_commands.h  vtest_device.c  vtest_objects.c  vtest_objects.h  vtest_protocol.h  vtest_socket.c
src/virgl/vulkan/: device.h  icd.c  icd.h  memory.c  memory.h  meson.build  vgl_device.c  vgl_structs.h  vk_commands.c  vk_device.c  vk_objects.c  vk_structs.h
src/virgl/vulkan/tools/: code_generator.py  implemented.json  vgl_entrypoints_gen.py  vgl_icd_gen.py  vgl_obj_creation_gen.py
src/virgl/vulkan/tools/templates/: vgl_entrypoints_template.c  vgl_entrypoints_template.h
